[gd_scene load_steps=12 format=3 uid="uid://csl6ng7jbhgj5"]

[ext_resource type="Script" path="res://scripts/ui/level_ui.gd" id="1_3muol"]
[ext_resource type="Texture2D" uid="uid://bc04yw6r32h68" path="res://assets/pics/milestone.png" id="2_oj1v8"]
[ext_resource type="Texture2D" uid="uid://d2gwthba8y1qt" path="res://assets/pics/fuel.png" id="2_wv2ak"]
[ext_resource type="PackedScene" path="res://scenes/car/pedal.tscn" id="3_anrv5"]
[ext_resource type="PackedScene" uid="uid://crdy2035b233y" path="res://scenes/car/fuel_bar.tscn" id="3_pna6q"]
[ext_resource type="PackedScene" path="res://scenes/global/ui/currency/currency_display_coins.tscn" id="4_s7owg"]
[ext_resource type="PackedScene" path="res://scenes/global/ui/currency/currency_display_gems.tscn" id="5_entv7"]
[ext_resource type="PackedScene" uid="uid://6cnvfo51upry" path="res://scenes/car/gauge.tscn" id="5_fl8er"]
[ext_resource type="PackedScene" path="res://scenes/car/low_fuel_alarm.tscn" id="6_75jpt"]
[ext_resource type="Texture2D" uid="uid://b3ei23yviul05" path="res://assets/pics/trophy.png" id="9_bmjdt"]
[ext_resource type="Texture2D" uid="uid://2ojkr2xoel1l" path="res://assets/pics/pause.png" id="10_gb3my"]

[node name="LevelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3muol")

[node name="LevelMap" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 0)
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.289583
anchor_right = 0.710417
anchor_bottom = 0.00925926
offset_right = -8.00134
grow_horizontal = 2

[node name="Control" type="Control" parent="LevelMap"]
clip_contents = true
layout_direction = 2
layout_mode = 1
anchor_right = 1.25
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="LevelMap/Control"]
custom_minimum_size = Vector2(198, 10)
layout_mode = 2
anchor_right = 0.198
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel2" type="Panel" parent="LevelMap/Control"]
custom_minimum_size = Vector2(198, 10)
layout_mode = 2
anchor_left = 0.2
anchor_right = 0.398
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="Panel3" type="Panel" parent="LevelMap/Control"]
custom_minimum_size = Vector2(198, 10)
layout_mode = 2
anchor_left = 0.4
anchor_right = 0.598
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="Panel4" type="Panel" parent="LevelMap/Control"]
custom_minimum_size = Vector2(198, 10)
layout_mode = 2
anchor_left = 0.6
anchor_right = 0.798
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="Panel5" type="Panel" parent="LevelMap/Control"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.10352e-05
metadata/_edit_use_anchors_ = true

[node name="NextMilestone" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1400.0
offset_top = 40.0
offset_right = 1440.0
offset_bottom = 80.0

[node name="Milestone" type="Sprite2D" parent="NextMilestone"]
texture = ExtResource("2_oj1v8")

[node name="Arrow" type="Label" parent="NextMilestone"]
layout_mode = 0
offset_left = -10.0
offset_top = -90.0
offset_right = -1.0
offset_bottom = -56.0
theme_override_font_sizes/font_size = 36
text = "▴"

[node name="LabelDistance" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.323958
anchor_top = 0.0148148
anchor_right = 0.38125
anchor_bottom = 0.0953704
theme_type_variation = &"Label_L"
text = "0 m"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LabelDistanceArrow" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342187
anchor_top = 0.00462963
anchor_right = 0.360938
anchor_bottom = 0.0314815
theme_override_font_sizes/font_size = 24
text = "▴"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 384.0
offset_bottom = 96.0
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_wv2ak")
expand_mode = 2

[node name="FuelBar" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_pna6q")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrencyDisplayCoins" parent="VBoxContainer" instance=ExtResource("4_s7owg")]
layout_mode = 2

[node name="CurrencyDisplayGems" parent="VBoxContainer" instance=ExtResource("5_entv7")]
layout_mode = 2

[node name="PedalL" parent="." instance=ExtResource("3_anrv5")]
layout_mode = 1

[node name="PedalR" parent="." instance=ExtResource("3_anrv5")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_right = 0.0
grow_horizontal = 0

[node name="GaugeSpeed" parent="." instance=ExtResource("5_fl8er")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -320.0
offset_right = 720.0
offset_bottom = 0.0
grow_vertical = 0

[node name="LowFuelAlarm" parent="." instance=ExtResource("6_75jpt")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1037.0
offset_top = -240.0
offset_right = -317.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainerHighscore" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 16.0
offset_right = -160.0
offset_bottom = 87.0
grow_horizontal = 0
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="HBoxContainerHighscore"]
layout_mode = 2
texture = ExtResource("9_bmjdt")
expand_mode = 2

[node name="LabelHighscore" type="Label" parent="HBoxContainerHighscore"]
layout_mode = 2
theme_type_variation = &"Label_L"
text = "0m"
horizontal_alignment = 2

[node name="ButtonPause" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 93.0
grow_horizontal = 0
theme_type_variation = &"TransparentButton"
icon = ExtResource("10_gb3my")
icon_alignment = 1

[connection signal="pressed" from="ButtonPause" to="." method="_on_button_pause_pressed"]
